--- a/task 4/task4.ipynb
+++ b/task 4/task4.ipynb
@@ -103,6 +103,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bca784ae",
+   "metadata": {},
+   "source": [
+    "# characte_wise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "81802e93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aaaabhiijmnz\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"\"\n",
+    "text_input = input(\"enter your input = \")\n",
+    "text += text_input\n",
+    "spaces_remove = text.replace(\" \", \"\")\n",
+    "letter_list = list(spaces_remove)\n",
+    "n = len(letter_list)\n",
+    "for i in range(n):\n",
+    "    for j in range(n-1-i):\n",
+    "        if letter_list[j] > letter_list[j+1]:\n",
+    "            letter_list[j],letter_list[j + 1] = letter_list[j + 1], letter_list[j]\n",
+    "\n",
+    "\n",
+    "print(\"\".join(letter_list))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af08c8eb",
+   "metadata": {},
+   "source": [
+    "# sentence_wise"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "id": "2d50b591",
